修改为自适应

--- a/xiaowei/Task4/index.html
+++ b/xiaowei/Task4/index.html
@@ -4,26 +4,23 @@
 	<title>百度前端学院-task4</title>
 	<meta charSet="utf-8">
 	<style>
-		.container{
-			background-color: gray;
-			width: 960px;
-			height: 600px;
-		}
 		.box{
-			background-color: #ccc;
-			width: 400px;
-			height: 200px;
-			position: relative;
+			position: absolute;
 			left: 50%;
 			top: 50%;
 			transform: translate(-50%,-50%);
+
+			width: 400px;
+			height: 200px;
+
+			background-color: #ccc;
 			overflow: hidden;
 		}
 		.radius{
-			background-color: #fc0;
 			width: 100px;
 			height: 100px;
 			border-radius: 50%;
+			background-color: #fc0;
 		}
 		.left-top{
 			position: absolute;
@@ -50,12 +47,10 @@
 	</style>
 </head>
 <body>
-	<div class="container">
-		<div class="box">
-			<div class="radius left-top"></div>
-			<div class="radius right-bottom"></div>
-		</div>	
-	</div>
+	<div class="box">
+		<div class="radius left-top"></div>
+		<div class="radius right-bottom"></div>
+	</div>	
 
 </body>
 </html>
